# spm2ytm

./: .gitignore  README.md  generate_oauth.py  hello.py  pyproject.toml
scripts/: cleanup_songsfile.py  txt2json_cookies.py
src/spm2ytm/: config.py  utils.py
src/spm2ytm/cli/: main.py  main_spotify_only.py
src/spm2ytm/clients/: spotify_client.py  yt_client.py  yt_music_client.py
src/spm2ytm/core/: create.py  extract.py
src/spm2ytm/test/: ytmusictest.py
tests/: test_add_song_to_playlist.py  test_create_yt_playlist.py  test_playwright.py
